# arduino_rfid

./: CMakeLists.txt  README.md  package.xml
launch/: ros_rfid.launch  ros_rfid_serial.launch  ros_rfid_wifi.launch
msg/: RFID_data.msg
scetches/rfid_serial/: rfid_serial.ino
scetches/rfid_serial_mfrc522/: rfid_serial_mfrc522.ino
scetches/serial/rfid_serial_mfrc522/: rfid_serial_mfrc522.ino
scetches/serial/rfid_serial_rdm6300/: rfid_serial_rdm6300.ino
scetches/wifi/wifi_rc522/: wifi_rc522.ino
scripts/: ros_rfid.py
scripts/serial/: ros_rfid_serial.py  serial_utils.py
scripts/wifi/: http_utils.py  ros_rfid_wifi.py
